--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.5.0",
-    "grunt-contrib-concat": "~0.5.0"
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-compass": "^1.0.3"
   }
 }
