--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-watch": "~0.5.0",
-    "grunt-contrib-compass": "^1.0.3"
+    "grunt-contrib-compass": "^1.0.3",
+    "grunt-contrib-requirejs": "^0.4.4"
   }
 }
